@@ -1,3 +1,8 @@
+2007-02-21  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/Makefile.am, src/formats/Makefile.in: Fix linking
+	problems on Linux discovered by Craig.
+
 2007-02-20  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* scripts/*.i, scripts/*: Add access to OBForceField classes and methods.
